--- a/MusicPlayer/music.kv
+++ b/MusicPlayer/music.kv
@@ -2,9 +2,16 @@
 
 <MainLayout>
     #navigation panel
+    size: (1200, 100)
     StackLayout:
         id: navigation_panel
         size_hint: (.2, .2)
+        canvas.before:
+            Color:
+                rgba: 180/255, 180/255, 180/255, 0.15
+            Rectangle:
+                pos: self.pos
+                size: self.size
         Button:
             text: 'Wyszukaj utwór'
             size_hint: (1, .04)
@@ -15,26 +22,34 @@
             size_hint: (1, .04)
             center_x: 1
             font_size: 14
+        Label:
+            size_hint: (1, .72)
+        AnchorLayout:
+            id: now_playing
+            anchor_x: 'center'
+            anchor_y: 'bottom'
+            size_hint: (1, .2)
     #main panel
     StackLayout:
-        #search TextBox
+        #seach panel
         GridLayout:
             rows: 1
             cols: 2
-            canvas.before:
-                Color:
-                    rgba: 180/255, 180/255, 180/255, 1
-                Rectangle:
-                    pos: self.pos
-                    size: self.size
             size_hint: (1, .1)
+            #search TextBox
             TextInput:
                 id: search_box
+                background_color: 180/255, 180/255, 180/255, 0.3
                 size: (.7, .1)
                 size_hint: (.7, .1)
                 font_size: 24
                 top: 1
                 pos_hint_y: root.y
+                multiline: False
+                hint_text: 'Wyszukaj'
+                cursor_color: 1, 1, 1, 1
+                foreground_color: 1, 1, 1, 1
+                on_text_validate: root.searchSong()
             Button:
                 top: 1
                 pos_hint_y: root.y
@@ -49,7 +64,7 @@
             id: results
             canvas.before:
                 Color:
-                    rgba: 180/255, 180/255, 180/255, 1
+                    rgba: 0, 0, 0, 0.9
                 Rectangle:
                     pos: self.pos
                     size: self.size
@@ -58,6 +73,12 @@
         BoxLayout:
             size_hint: (1, .2)
             orientation: 'horizontal'
+            canvas.before:
+                Color:
+                    rgba: 64/255, 62/255, 58/255, 0.9
+                Rectangle:
+                    pos: self.pos
+                    size: self.size
             Button:
                 text: 'Poprzedni'
                 font_size: 14
@@ -72,5 +93,11 @@
             Button:
                 text: 'Nastepny'
                 font_size: 14
+            Slider:
+                id: volume_control
+                min: 0
+                max: 100
+                step: 1
+                orientation: 'vertical'
 
 
