--- a/MusicPlayer/music.kv
+++ b/MusicPlayer/music.kv
@@ -115,7 +115,7 @@
                     max: 100
                     value: 50
                     value_track: True
-                    value_track_color: 1, 0, 0, 1
+                    value_track_color: 94/255, 223/255, 242/255, 1
                     cursor_size: 10, 10
 
                     step: 1
@@ -260,7 +260,7 @@
                     max: 100
                     value: 50
                     value_track: True
-                    value_track_color: 1, 0, 0, 1
+                    value_track_color: 94/255, 223/255, 242/255, 1
                     cursor_size: 10, 10
 
                     step: 1
