--- a/MusicPlayer/music.kv
+++ b/MusicPlayer/music.kv
@@ -8,6 +8,8 @@
         StackLayout:
             id: navigation_panel
             size_hint: (.2, .2)
+            padding: 5
+            spacing: 5
             canvas.before:
                 Color:
                     rgba: 180/255, 180/255, 180/255, 0.15
@@ -152,6 +154,8 @@
         StackLayout:
             id: navigation_panel
             size_hint: (.2, .2)
+            padding: 5
+            spacing: 5
             canvas.before:
                 Color:
                     rgba: 180/255, 180/255, 180/255, 0.15
