--- a/MusicPlayer/music.kv
+++ b/MusicPlayer/music.kv
@@ -1,5 +1,6 @@
 
 <MainLayout>
+    #main layout wrapper
     GridLayout:
         cols: 3
         rows: 1
@@ -16,11 +17,13 @@
                 Rectangle:
                     pos: self.pos
                     size: self.size
+            #search panel button
             Button:
                 text: 'Wyszukaj'
                 size_hint: (1, .04)
                 center_x: 1
                 font_size: 14
+            #library panel button
             Button:
                 spacing: 10
                 text: 'Biblioteka'
@@ -30,6 +33,7 @@
                 on_press: root.manager.current = 'LibraryScreen'
             Label:
                 size_hint: (1, .72)
+            #actual song image
             AnchorLayout:
                 id: now_playing
                 anchor_x: 'center'
@@ -56,6 +60,7 @@
                     cursor_color: 1, 1, 1, 1
                     foreground_color: 1, 1, 1, 1
                     on_text_validate: root.searchSong()
+                #search for results button
                 Button:
                     top: 1
                     pos_hint_y: root.y
@@ -87,6 +92,7 @@
                         size: self.size
                 StackLayout:
                     size_hint: (.8, 1)
+                    #controls
                     BoxLayout:
                         spacing: 5
                         padding: 10
@@ -111,7 +117,7 @@
                             anchor_x: 'center'
                             anchor_y: 'center'
                             Button:
-                                on_press: root.plauseSong()
+                                on_press: root.pauseSong()
                             Image:
                                 source: 'Images/pauseButton.png'
                                 size_hint: 0.4, 0.4
@@ -123,6 +129,7 @@
                             Image:
                                 source: 'Images/nextButton.png'
                                 size_hint: 0.4, 0.4
+                    #song progress bar
                     ProgressBar:
                         id: playback_control
                         foreground_color: 1, 0, 0, 1
@@ -131,6 +138,7 @@
                         max: 10000
                         orientation: 'horizontal'
                         size_hint: (1, .5)
+                #slider to change audio volume
                 Slider:
                     id: volume_control
                     min: 0
@@ -139,7 +147,6 @@
                     value_track: True
                     value_track_color: 94/255, 223/255, 242/255, 1
                     cursor_size: 10, 10
-
                     step: 1
                     orientation: 'vertical'
                     size_hint: (.1, 1)
@@ -278,7 +285,7 @@
                             anchor_x: 'center'
                             anchor_y: 'center'
                             Button:
-                                on_press: root.plauseSong()
+                                on_press: root.pauseSong()
                             Image:
                                 source: 'Images/pauseButton.png'
                                 size_hint: 0.4, 0.4
